--- a/MinecraftDemo.app/Contents/Info.plist
+++ b/MinecraftDemo.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>AMStayOpen</key>
 	<false/>
 	<key>BuildMachineOSBuild</key>
-	<string>20A241133</string>
+	<string>18A391012</string>
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -30,15 +30,15 @@
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>Automator Application Stub</string>
+	<string>Application Stub</string>
 	<key>CFBundleIconFile</key>
-	<string>ApplicationStub</string>
+	<string>AutomatorApplet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.automator.apmc</string>
+	<string>com.apple.automator.MinecraftDemo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>apmc</string>
+	<string>MinecraftDemo</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -52,25 +52,25 @@
 	<key>CFBundleURLTypes</key>
 	<array/>
 	<key>CFBundleVersion</key>
-	<string>512</string>
+	<string>492</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13E6049a</string>
+	<string>11O62d</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.6</string>
+	<string>10.15.6</string>
 	<key>DTSDKBuild</key>
-	<string>21G105</string>
+	<string>19G49</string>
 	<key>DTSDKName</key>
-	<string>macosx12.6.internal</string>
+	<string>macosx10.15internal</string>
 	<key>DTXcode</key>
-	<string>1330</string>
+	<string>1140</string>
 	<key>DTXcodeBuild</key>
-	<string>13E6049a</string>
+	<string>11O62d</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.9</string>
+	<string>10.8</string>
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSAppleEventsUsageDescription</key>
